Body overflow issue is solved coz of tooltip

--- a/webresources/hub_/calendar/css/appointment_style.css
+++ b/webresources/hub_/calendar/css/appointment_style.css
@@ -1,5 +1,6 @@
 body {
     margin: 0;
+    overflow: hidden;
 }
 
 #appointment {
@@ -356,6 +357,7 @@ button{
     background: #ffffff;
     color: #333333;
     padding: 5px;
+    overflow-y:hidden; 
 }
 
 
